src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@layer base {
  :root {
    --background: 225 30% 98%;
    --foreground: 225 71% 3%;
    --muted: 225 7% 95%;
    --muted-foreground: 225 2% 31%;
    --popover: 225 30% 98%;
    --popover-foreground: 225 71% 3%;
    --card: 225 30% 98%;
    --card-foreground: 225 71% 3%;
    --border: 225 13% 91%;
    --input: 225 13% 91%;
    --primary: 225 79% 74%;
    --primary-foreground: 225 79% 14%;
    --secondary: 225 19% 82%;
    --secondary-foreground: 225 19% 22%;
    --accent: 225 25% 75%;
    --accent-foreground: 225 25% 15%;
    --destructive: 17 81% 43%;
    --destructive-foreground: 0 0% 100%;
    --ring: 225 79% 74%;
    --chart-1: 225 79% 74%;
    --chart-2: 225 19% 82%;
    --chart-3: 225 25% 75%;
    --chart-4: 225 19% 85%;
    --chart-5: 225 82% 74%;
    --radius: 0.5rem;
  }

  .dark {
    --background: 225 45% 2%;
    --foreground: 225 30% 98%;
    --muted: 225 7% 5%;
    --muted-foreground: 225 2% 69%;
    --popover: 225 45% 2%;
    --popover-foreground: 225 30% 98%;
    --card: 225 45% 2%;
    --card-foreground: 225 30% 98%;
    --border: 225 13% 12%;
    --input: 225 13% 12%;
    --primary: 225 79% 74%;
    --primary-foreground: 225 79% 14%;
    --secondary: 225 2% 17%;
    --secondary-foreground: 225 2% 77%;
    --accent: 225 9% 27%;
    --accent-foreground: 225 9% 87%;
    --destructive: 17 81% 57%;
    --destructive-foreground: 0 0% 0%;
    --ring: 225 79% 74%;
    --chart-1: 225 79% 74%;
    --chart-2: 225 2% 17%;
    --chart-3: 225 9% 27%;
    --chart-4: 225 2% 20%;
    --chart-5: 225 82% 74%;
  }
}
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

